syntax = "proto3";

option csharp_namespace = "EngineerNotebook.GrpcContracts.Authentication";

package authentication;

// The greeting service definition.
service Authentication {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
  rpc Register(RegistrationRequest) returns (RegistrationResponse);
}

message RegistrationResponse { 
	bool success = 1;
}

message AuthenticationRequest { 
	string username = 1;
	string password = 2;
}

message RegistrationRequest { 
	string username = 1;
	string password = 2;
	string confirmPassword = 3;
}

message AuthenticationResponse {
	bool result = 1;
	string token = 2;
	string username = 3;
	bool isLockedOut = 4;
	bool isNotAllowed = 5;
	bool requiresTwoFactor = 6;
}
